unpackaged/main/default/objects/bt_stripe__Code__c/bt_stripe__Code__c.object-meta.xml
<CustomObject>
    <description>The Code object stores checkout codes for discounts or to control access. A discount Code can be a fixed amount or a percent. You can also control how many Codes are available for use.</description>
    <label>Code</label>
    <nameField>
        <label>Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>