unpackaged/main/default/objects/bt_stripe__Code__c/fields/bt_stripe__Description__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>