unpackaged/main/default/objects/bt_stripe__Code__c/fields/bt_stripe__Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>