unpackaged/main/default/objects/bt_stripe__Code__c/fields/bt_stripe__Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Quantity_Available__c</fullName>
    <inlineHelpText>The number of times a Code can be used. Leave this field blank if there is no limit.</inlineHelpText>
    <label>Quantity Made Available</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>