unpackaged/main/default/objects/bt_stripe__Code__c/fields/bt_stripe__Quantity_Claimed__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Quantity_Claimed__c</fullName>
    <inlineHelpText>The number of times this Code has been used. If the Quantity Available field is set and the Quantity Claimed equals that value, the Code can no longer be used.</inlineHelpText>
    <label>Quantity Claimed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>