unpackaged/main/default/objects/bt_stripe__Code__c/fields/bt_stripe__Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Quantity_Remaining__c</fullName>
    <formula>IF(ISNULL(bt_stripe__Quantity_Available__c), null, bt_stripe__Quantity_Available__c - NULLVALUE(bt_stripe__Quantity_Claimed__c, 0))</formula>
    <inlineHelpText>The number of remaining times this Code can be used. Calculated by subtracting Quantity Claimed from the Quantity Made Available. This field will be blank if the Quantity Made Available is blank.</inlineHelpText>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>