unpackaged/main/default/objects/bt_stripe__Code__c/fields/bt_stripe__Restrict_To_Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Restrict_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this field is set, Only Contacts associated to this Account can use this Code.</inlineHelpText>
    <label>Restrict To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Codes</relationshipLabel>
    <relationshipName>Codes</relationshipName>
    <type>Lookup</type>
</CustomField>