unpackaged/main/default/objects/bt_stripe__Code__c/fields/bt_stripe__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Valid_From__c</fullName>
    <inlineHelpText>If set, the Code can only be used on or after the Date.</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>